# TODOSkSy2020

./: .gitignore  README.md  frondAndBackend.code-workspace  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
assets/css/: tailwind.css
backend/: .env  Cargo.toml  README.txt  database.sql  docker-compose.yml
backend/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
components/: Author.vue  Input.vue  MobileNavbar.vue  Navbar.vue  NormalNavbar.vue  Title.vue  Todo.vue
frontend/: README.md  db.json  nuxt.config.js  package-lock.json  package.json
frontend/.nuxt/: router.js
frontend/assets/css/: tailwind.css
frontend/components/: Author.vue  Input.vue  MobileNavbar.vue  Title.vue  Todo.vue
frontend/pages/: add.vue  edit.vue  index.vue
frontend/services/: TodoService.js
layouts/: default.vue
pages/: add.vue  edit.vue  impressum.vue  index.vue
