[package]
name = "backend"
version = "0.1.0"
authors = ["Karol <rogoza.karol98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0"
serde = "1.0.110"

# for .env file
dotenv = "0.15.0"
config = "0.10.1"

# for DB
tokio-pg-mapper ="0.1.7"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.5"
tokio-postgres = "0.5.4"

listenfd = "0.3"
